k8s/infra/databases/postgres/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: cwx
  labels:
    lbip: cwx
  annotations:
    "lbipam.cilium.io/ips": "192.168.5.33"

spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  externalTrafficPolicy: Cluster
  selector:
    app: postgres
  ports:
  - port: 5432
    name: postgres
    targetPort: 5432
