k8s/infra/databases/postgres/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cwx
spec:
  selector:
    app: postgres
  clusterIP: None
  ports:
  - port: 5432
    name: postgres
    targetPort: 5432
