k8s/infra/databases/postgres/TCPRoute.yaml
# 没有成功

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-tcp-route
  namespace: cwx
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: cwx
    sectionName: postgres
  rules:
  - backendRefs:
    - name: postgres-lb
      port: 5432
